# ledoxide

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  flake.nix  prebuild.pl  prebuild.sh
constraint/: amount_extraction.lark  amount_extraction.regex  categorization.lark  categorization.regex  note_taking.lark  note_taking.regex
nix/: module.nix  package.nix
prompt/: amount_extraction.md  categorization.md  description.md  note_taking.md
src/: args.rs  bill.rs  cli.rs  error.rs  ext.rs  key.rs  main.rs  models.rs  runner.rs  sample.rs  schedule.rs  state.rs  task.rs
src/task/: descriptor.rs  mod.rs  ollama.rs  run.rs
