[package]
name = "ledoxide"
version = "0.4.2"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
clap = { version = "4.5.58", features = ["derive"] }
futures = "0.3.31"
image = "0.25.9"
log = "0.4.29"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", rev = "2a10942d89c17d2c33282f9c7cf97293f7bc271e" }
postcard = { version = "1.1.3", features = ["alloc"] }
pretty_env_logger = "0.5.0"
rand = "0.10.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.13.2", default-features = false, features = [
	"multipart",
] }
tower = { version = "0.5.3", features = ["util"] }

[features]
cuda = ["mistralrs/cuda"]
metal = ["mistralrs/metal"]
accelerate = ["mistralrs/accelerate"]
