[package]
name = "ledoxide"
version = "0.7.4"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
clap = { version = "4.5.58", features = ["derive"] }
encoding_rs = "0.8.35"
futures = "0.3.31"
hf-hub = { version = "0.5.0", features = ["tokio"] }
image = "0.25.9"
llama-cpp-2 = { git = "https://github.com/zhufucdev/llama-cpp-rs.git", rev = "90470f41f42d91c97b4a4d653600a64b77f6bc63", features = [
	"llguidance",
	"mtmd",
] }
log = "0.4.29"
postcard = { version = "1.1.3", features = ["alloc"] }
pretty_env_logger = "0.5.0"
rand = "0.10.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["multipart", "stream"] }
tower = { version = "0.5.3", features = ["util"] }

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
