[package]
name = "ledoxide"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
clap = { version = "4.5.58", features = ["derive"] }
encoding_rs = "0.8.35"
futures = "0.3.31"
image = "0.25.9"
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.10.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs", "rt-multi-thread"] }
zip = "8.2.0"
ollama-rs = { version = "0.3.4" }
trait-variant = "0.1.2"
smol_str = { version = "0.3.6", features = ["serde"] }
base64 = "0.22.1"
schemars = "1.2.1"
tracing-test = "0.2.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde_plain = "1.0.2"

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["multipart", "stream"] }
tower = { version = "0.5.3", features = ["util"] }
